# Physical-AI-Humanoid-Robotics

./: $null  .gitignore  1.7.0  README.md
.github/workflows/: main.yml
.qwen/: config.json  config.md
.qwen/skills/: code_example_generator.py  content_validator.py  diagram_generator.py  readability_checker.py  translation_validator.py
.qwen/subagents/: code_assistant.py  content_generator.py  simulation_config.py  textbook_generator.py  translator.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: requirements.txt  textbook.db
backend/src/: config.py  content_validation.js  content_validation.py  content_validator.py  database.py  main.py  test_features.py  textbook.db  upload_chapters.py  verification_framework.py  verification_tool.py
backend/tests/: performance_test.py  test_api.py  (+1 more)
docs/: deployment-guide.md  index.md  qwen-cli-usage.md
frontend/: backend_api_example.py  config-verification.js  docusaurus.config.js  navbar_config.js  package-lock.json  package.json  server.js  sidebars.js  wdio.conf.js  webpack.config.js
rag-backend/: .gitignore  agent.py  config.py  gemini_adapter.py  main.py  mock_embedding.py  models.py  populate_qdrant.py  pyproject.toml  retrieval_service.py  test_pipeline.py  test_qdrant.py  test_retrieval.py  test_retrieval_functionality.py  tools.py
rag-backend/tests/: test_agent.py  test_api.py  test_integration.py  test_rag_pipeline.py
tests/: conftest.py  test_auth.py  test_chatbot.py  test_database.py  test_main.py  test_translate.py
(+245 files in other folders)
